# eg4-python

./: .env.example  .gitignore  README.md  changelog.md  pyproject.toml  requirements.txt  updating_howto.md
eg4_python/: __init__.py  client.py  constants.py  models.py
tests/: __init__.py  test_client copy.py.xx
