[project]
name = "eg4_python"
version = "0.1.6"
description = "A Python API for interacting with EG4 Inverter systems."
authors = [
    { name = "Matt Dreyer", email = "matt_dreyer@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["EG4", "Inverter", "API", "Energy", "Battery"]
dependencies = [
    "aiohttp>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "python-dotenv>=1.0.0"
]

[tool.setuptools]
packages = ["eg4_python"]


[project.urls]
Homepage = "https://github.com/matt-dreyer/eg4_python"
Repository = "https://github.com/matt-dreyer/eg4_python"
